--- a/templets/importScanningFIle.html
+++ b/templets/importScanningFIle.html
@@ -106,28 +106,76 @@
         <button class="btn btn-primary" type="submit">Import</button>
     </form>
 </div><br>
+   <!-- Update Barcode Form -->
+                        <!--<div class="flex-fill" style="min-width: 300px; max-width: 100%;">-->
+                        <!--    <h5 class="card-title">Update Barcode</h5>-->
+                        <!--    <div class="card shadow p-3 h-100">-->
+                        <!--        <form action="/dataEnter" method="post">-->
+                        <!--            {% csrf_token %}-->
+                        <!--            <div class="d-flex flex-wrap gap-3" style="display: flex; flex-direction: row;">-->
+                        <!--                <div class="mb-3">-->
+                        <!--                <label for="cb" class="form-label">Enter a locationNo:</label>-->
+                        <!--                <input type="text" name="cb" id="bc" class="form-control"-->
+                        <!--                    placeholder="Location number ...">-->
+                        <!--            </div>-->
+                        <!--            <div class="mb-3">-->
+                        <!--                <label for="cb" class="form-label">Enter a Addl:</label>-->
+                        <!--                <input type="text" name="cb" id="bc" class="form-control"-->
+                        <!--                    placeholder="Addl ...">-->
+                        <!--            </div>-->
+                        <!--            <div class="mb-3">-->
+                        <!--                <label for="ub" class="form-label">Enter Update Addl:</label>-->
+                        <!--                <input type="text" name="ub" id="ub" class="form-control"-->
+                        <!--                    placeholder="Update Addl ...">-->
+                        <!--            </div>-->
+                        <!--            <div class="mb-3">-->
+                        <!--            <button type="submit" class="btn btn-success w-100">Update</button>-->
+                        <!--            </div>-->
+                        <!--            </div>-->
+                        <!--        </form>-->
+                        <!--    </div>-->
+                        <!--</div><br>-->
+                         <!-- Django Messages -->
+
+
+
+
+
     <!-- Table Section -->
     <div class="card shadow-lg border-0">
         <div class="card-body">
 
             <!-- Table Wrapper (scrollable) -->
             <div class="table-responsive" style="max-height: 500px; overflow-y: auto;">
+                <h4>Scanning Record Section</h4>
                 <table class="table table-bordered table-striped table-hover align-middle text-center" id="table1">
                     <thead class="table-dark sticky-top">
                         <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">Date</th>
-                            <th scope="col">Location No</th>
+                            <th scope="col">Location</th>
                             <th scope="col">ADDL</th>
-                        </tr>
+                            <th scope="col">ITEMCODE</th>
+                            <th scope="col">ITEMNAME</th>
+                            <th scope="col">SIZE</th>
+                            <th scope="col">MRP</th>
+                            <th scope="col">BRAND</th>
+                            <th scope="col">SECTION</th>
+                            <th scope="col">SEASON</th>
+                            <th scope="col">COLOURS</th>
+                    </tr>
                     </thead>
                     <tbody>
                         {% for row in display %}
                         <tr>
-                            <td>{{ row.id }}</td>
-                            <td>{{ row.my_date }}</td>
                             <td>{{ row.loc_rec }}</td>
                             <td>{{ row.add_item_list }}</td>
+                            <td>{{ row.ITEMCODE }}</td>
+                            <td>{{ row.ITEMNAME }}</td>
+                            <td>{{ row.SIZE }}</td>
+                            <td>{{ row.MRP }}</td>
+                            <td>{{ row.BRANDNAME }}</td>
+                            <td>{{ row.SECTION }}</td>
+                            <td>{{ row.SEASON }}</td>
+                            <td>{{ row.COLOURS }}</td>
                         </tr>
                         {% empty %}
                         <tr>
@@ -139,8 +187,108 @@
             </div>
 
         </div>
-      
+        <br>
+
+ <!-- Table Excess Section -->
+    <div class="card shadow-lg border-0">
+        <div class="card-body">
+
+            <!-- Table Wrapper (scrollable) -->
+            <div class="table-responsive" style="max-height: 500px; overflow-y: auto;">
+                <h4>Excess Section </h4>
+                <table class="table table-bordered table-striped table-hover align-middle text-center" id="table1">
+                    <thead class="table-dark sticky-top">
+                        <tr>
+                            <th scope="col">Location</th>
+                            <th scope="col">ADDL</th>
+                            <th scope="col">ITEMCODE</th>
+                            <th scope="col">ITEMNAME</th>
+                            <th scope="col">SIZE</th>
+                            <th scope="col">MRP</th>
+                            <th scope="col">BRAND</th>
+                            <th scope="col">SECTION</th>
+                            <th scope="col">SEASON</th>
+                            <th scope="col">COLOURS</th>
+
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for row in display1 %}
+                        <tr>
+                            <td>{{ row.loc_rec }}</td>
+                            <td>{{ row.add_item_list }}</td>
+                            <td>{{ row.ITEMCODE }}</td>
+                            <td>{{ row.ITEMNAME }}</td>
+                            <td>{{ row.SIZE }}</td>
+                            <td>{{ row.MRP }}</td>
+                            <td>{{ row.BRANDNAME }}</td>
+                            <td>{{ row.SECTION }}</td>
+                            <td>{{ row.SEASON }}</td>
+                            <td>{{ row.COLOURS }}</td>
+
+                        </tr>
+                        {% empty %}
+                        <tr>
+                            <td colspan="4" class="text-center text-muted">No records found</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+
+        </div>
+<br>
+<!-- Table Nill Section -->
+    <div class="card shadow-lg border-0">
+        <div class="card-body">
+
+            <!-- Table Wrapper (scrollable) -->
+            <div class="table-responsive" style="max-height: 500px; overflow-y: auto;">
+                <h4>Nill Section</h4>
+                <table class="table table-bordered table-striped table-hover align-middle text-center" id="table1">
+                    <thead class="table-dark sticky-top">
+                        <tr>
+                            <th scope="col">Location</th>
+                            <th scope="col">ADDL</th>
+                            <th scope="col">ITEMCODE</th>
+                            <th scope="col">ITEMNAME</th>
+                            <th scope="col">SIZE</th>
+                            <th scope="col">MRP</th>
+                            <th scope="col">BRAND</th>
+                            <th scope="col">SECTION</th>
+                            <th scope="col">SEASON</th>
+                            <th scope="col">COLOURS</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for row in display2 %}
+                        <tr>
+                            <td>{{ row.loc_rec }}</td>
+                            <td>{{ row.add_item_list }}</td>
+                            <td>{{ row.ITEMCODE }}</td>
+                            <td>{{ row.ITEMNAME }}</td>
+                            <td>{{ row.SIZE }}</td>
+                            <td>{{ row.MRP }}</td>
+                            <td>{{ row.BRANDNAME }}</td>
+                            <td>{{ row.SECTION }}</td>
+                            <td>{{ row.SEASON }}</td>
+                            <td>{{ row.COLOURS }}</td>
+
+
+                        </tr>
+                        {% empty %}
+                        <tr>
+                            <td colspan="4" class="text-center text-muted">No records found</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+
+        </div>
+
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script >
    const sidebar = document.getElementById("sidebar");
     const overlay = document.getElementById("overlay");
@@ -154,14 +302,14 @@
     overlay.addEventListener("click", () => {
       sidebar.classList.remove("active");
       overlay.classList.remove("active");
-    }); 
+    });
   </script>
 
 </body>
 </html>
 
 
- 
+
 </body>
 </html>
 
