--- a/templets/downloadScanningData.html
+++ b/templets/downloadScanningData.html
@@ -198,6 +198,44 @@
         <button class="btn btn-success" onclick="downloadTable()">📥 Download Table</button>
       </form>
     </div>
+    <br>
+    <div class="container mt-4">
+  <div class="row justify-content-center">
+    <div class="col-lg-6 col-md-8 col-sm-12">
+
+      <!-- Delete Card -->
+      <div class="card shadow-lg border-0 rounded-4">
+        <div class="card-body">
+          <h4 class="card-title text-center text-danger mb-3">🗑 Delete Record</h4>
+          <p class="text-muted text-center">Enter the <b>Location No</b> and <b>ADDL</b> to delete a record.</p>
+          
+          <form method="get" action="/scand">
+            {% csrf_token %}
+
+            <!-- Location -->
+            <div class="mb-3">
+              <label for="locationNo" class="form-label">Location No</label>
+              <input type="text" name="locationNo" id="locationNo" class="form-control" placeholder="Enter location no" required>
+            </div>
+
+            <!-- ADDL -->
+            <div class="mb-3">
+              <label for="addl" class="form-label">ADDL</label>
+              <input type="text" name="addl" id="addl" class="form-control" placeholder="Enter ADDL code" required>
+            </div>
+
+            <!-- Submit Button -->
+            <button type="submit" class="btn btn-danger w-100">
+              Delete Record
+            </button>
+          </form>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
+<br>
    
 </div>
     
